--- a/css/app.css
+++ b/css/app.css
@@ -36,12 +36,13 @@ body {
 }
 
 /* ------------------------------------
-    Component: Special
+    Component: Main
 ------------------------------------ */
 
-.finallyShow {
-    opacity: 0;
+.item--label {
+    vertical-align: top;
 }
+
 
 /* ------------------------------------
     Component: Grand-Header
